DigicielFull/force-app/main/default/objects/amc__Meeting__c/amc__Meeting__c.object-meta.xml
<CustomObject>
    <description>The Meeting Object is used to record high level details for an individual Meeting within a Meeting Manager.</description>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>