DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Action that time will be logged against for this Meeting</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>