DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__End_Time__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Time__c</fullName>
    <inlineHelpText>Identifies the end time of the meeting</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>