DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__Event__c.field-meta.xml
<CustomField>
    <fullName>amc__Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if you wish to create a Salesforce Event related to this Meeting</inlineHelpText>
    <label>Event</label>
    <type>Checkbox</type>
</CustomField>