DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__Location__c.field-meta.xml
<CustomField>
    <fullName>amc__Location__c</fullName>
    <inlineHelpText>Identifies the location of the meeting</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>