DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__Meeting_Manager__c.field-meta.xml
<CustomField>
    <fullName>amc__Meeting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Meeting Manager record this relates to</inlineHelpText>
    <label>Meeting Manager</label>
    <referenceTo>amc__Meeting_Manager__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>