DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__Objective__c.field-meta.xml
<CustomField>
    <fullName>amc__Objective__c</fullName>
    <inlineHelpText>Identifies the high-level objectives of the meeting</inlineHelpText>
    <label>Objective</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>