DigicielFull/force-app/main/default/objects/amc__Meeting__c/fields/amc__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>amc__Start_Time__c</fullName>
    <inlineHelpText>Identifies the start time of the meeting</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>