DigicielFull/force-app/main/default/objects/amc__Meeting__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Objective__c</columns>
    <columns>amc__Location__c</columns>
    <columns>amc__Event__c</columns>
    <columns>amc__Start_Time__c</columns>
    <columns>amc__End_Time__c</columns>
    <columns>amc__Meeting_Manager__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>